Refactored NewsFetcher(and added HttpClientWrapper) in order to be able to mock this class, also added tests to NewsFetcher